<resources>
    <!-- APP -->
    <string name="app_name">EMPTIO</string>
    <string name="app_email">email@domain.ext</string>
    <string name="splash_welcome">¡Bienvenidos!</string>

    <!-- GENERAL -->
    <string name="home">Inicio</string>
    <string name="profile">Perfil</string>
    <string name="search">Buscar...</string>
    <string name="neww">Nuevo</string>
    <string name="settings">Configuración</string>
    <string name="support">Soporte</string>
    <string name="logout">Cerrar Sesión</string>
    <string name="download">Descargar</string>
    <string name="export">Exportar</string>
    <string name="pdf">PDF</string>
    <string name="excel">Excel</string>
    <string name="all">Todos</string>

    <!-- FORMULARIOS -->
    <string name="name">Nombre</string>
    <string name="surname">Apellido</string>
    <string name="full_name">Nombre Completo</string>
    <string name="email">Correo</string>
    <string name="password">Contraseña</string>
    <string name="rol">Rol</string>
    <string name="nit">NIT</string>
    <string name="company">Empresa</string>
    <string name="address">Dirección</string>

    <!-- HINTS -->
    <string name="enter_name">Ingrese el nombre</string>
    <string name="enter_surname">Ingrese el apellido</string>
    <string name="enter_email">Ingrese el correo</string>
    <string name="enter_password">Ingrese la contraseña</string>
    <string name="enter_rol">Ingrese el rol</string>
    <string name="enter_nit">Ingrese el NIT</string>
    <string name="enter_address">Ingrese la dirección</string>
    <string name="enter_company">Ingrese la empresa</string>

    <!-- PERFIL -->
    <string name="edit_profile">Editar Perfil</string>
    <string name="change_photo">Cambiar foto</string>
    <string name="personal_info">Información Personal</string>
    <string name="save_changes">Guardar Cambios</string>

    <!-- ADMIN DASHBOARD -->
    <string name="dash_admin_gestion_usu">Gestionar Usuarios</string>
    <string name="dash_admin_sub_gestion_usu">Administra los usuarios del sistema</string>

    <string name="dash_admin_gestion_tiendas">Gestionar Tiendas</string>
    <string name="dash_admin_sub_gestion_tiendas">Controla las tiendas registradas</string>

    <string name="dash_admin_gestion_rol">Gestionar Roles</string>
    <string name="dash_admin_sub_gestion_rol">Administra permisos y roles</string>

    <string name="dash_admin_reportes">Ver Reportes</string>
    <string name="dash_admin_sub_reportes">Consulta estadísticas y ventas</string>

    <!-- ADMIN USUARIOS -->
    <string name="dash_admin_new_user">Nuevo Usuario</string>
    <string name="dash_admin_create_new_user">Crear nuevo usuario</string>
    <string name="dash_admin_create_user">Crear Usuario</string>

    <string name="edit_user">Editar Usuario</string>
    <string name="update_user_info">Actualiza la información del usuario</string>

    <!-- ADMIN TIENDAS -->
    <string name="dash_admin_edit_shop">Editar Tienda</string>
    <string name="dash_admin_edit_info">Actualiza la información de las tiendas</string>

    <!-- REPORTES -->
    <string name="general_activity">Actividad General</string>
    <string name="export_reports">Exportar Reportes</string>
    <string name="users">Usuarios</string>
    <string name="shops">Tiendas</string>
    <string name="categories">Categorías</string>

    <!-- SELLER -->
    <string name="seller">Vendedor</string>
    <string name="shop">Tienda</string>
    <string name="update_info_seller">Actualiza la información de tu tienda</string>

    <!-- DASHBOARD SELLER -->
    <string name="resume_v">Resumen de Ventas</string>
    <string name="inventory">Inventario</string>
    <string name="available_products">Productos disponibles</string>

    <!-- PEDIDOS -->
    <string name="orders">Pedidos</string>
    <string name="pending_orders">Pedidos Pendientes</string>
    <string name="pending_order">Pedido pendiente</string>
    <string name="orders_manag">Gestiona los pedidos recibidos</string>

    <string name="total">TOTAL</string>
    <string name="pending">Pendiente</string>

    <string name="see_details">Ver detalles</string>
    <string name="prepare">Preparar</string>
    <string name="decline">Rechazar</string>
    <string name="acept">Aceptar</string>

    <string name="address_e">Dirección de envío</string>
    <string name="pay_method">Método de pago</string>

    <!-- PRODUCTOS -->
    <string name="products">Productos</string>
    <string name="my_products">Mis Productos</string>

    <string name="new_product">Nuevo Producto</string>
    <string name="add_product">Agrega un producto a tu tienda</string>

    <string name="edit_product">Editar Producto</string>
    <string name="edit_info_product">Modifica la información del producto</string>

    <string name="upload_image">Subir Imagen</string>

    <string name="category">Categoría</string>
    <string name="technology">Tecnología</string>
    <string name="sport">Deporte</string>

    <string name="name_product">Nombre producto</string>

    <string name="price">Precio</string>
    <string name="price_0">$0</string>

    <string name="stock">Stock</string>
    <string name="zero">0</string>

    <string name="description">Descripción</string>
    <string name="product_description">Describe el producto...</string>

    <string name="save_product">Guardar Producto</string>


    <string name="report_data_sale">Reporte de Ventas</string>


    <string name="filter_sellers">Vendedores</string>
    <string name="filter_shops">Tiendas</string>
    <string name="date_from">Fecha Desde</string>
    <string name="date_to">Fecha Hasta</string>
    <string name="search_data">Buscar Datos</string>
    <string name="clean_data">Limpiar</string>
    <string name="sales_report_result">Resultado del Reporte</string>
    <string name="sold_products">Productos Vendidos</string>


    <!-- Modelo Direcciones -->
    <string name="register_edit">Actualiza la información del registro</string>
    <string name="register_store">Registra la información del registro</string>
    <string name="register_quit">Verifica la información antes de eliminar</string>


    <!-- Modelo Modulos -->
    <string name="model_module_title">Gestionar Modulos</string>
    <string name="model_module_detail">Administra los modulos del sistema</string>

    <!-- Modelo Direcciones -->
    <string name="model_address_title">Gestionar Direcciones</string>
    <string name="model_address_detail">Administra las direcciones del sistema</string>

    <!-- Modelo Categorias -->
    <string name="model_category_title">Gestionar Categorias</string>
    <string name="model_category_detail">Administra las categorias del sistema</string>

    <!-- Modelo Pagos -->
    <string name="model_gateway_title">Gestionar Pasarelas</string>
    <string name="model_gateway_detail">Administra las pasarelas de pago del sistema</string>

    <!-- Modelo Imagenes -->
    <string name="model_image_title">Gestionar Imagenes</string>
    <string name="model_image_detail">Administra las imagenes del sistema</string>

    <!-- Modelo Ordenes -->
    <string name="model_order_title">Gestionar Ordenes</string>
    <string name="model_order_detail">Administra las ordenes del sistema</string>

    <!-- Modelo Trade -->
    <string name="model_trade_title">Gestionar Transacciones</string>
    <string name="model_trade_detail">Administra las transacciones de pago</string>
    <string name="model_epayco_title">Gestionar Epayco</string>
    <string name="model_epayco_detail">Administra las transacciones de ePayco</string>

    <!-- Modelo Pagos -->
    <string name="model_payment_title">Gestionar Pagos</string>
    <string name="model_payment_detail">Administra los pagos del sistema</string>

    <!-- Modelo Productos -->
    <string name="model_product_title">Gestionar Productos</string>
    <string name="model_product_detail">Administra los productos del sistema</string>

    <!-- Modelo Compras -->
    <string name="model_purchase_title">Gestionar Compras</string>
    <string name="model_purchase_detail">Administra las compras del sistema</string>

    <!-- Modelo Roles -->
    <string name="model_role_title">Gestionar Roles</string>
    <string name="model_role_detail">Administra los roles del sistema</string>

    <!-- Modelo Vendedores -->
    <string name="model_seller_title">Gestionar Vendedores</string>
    <string name="model_seller_detail">Administra los vendedores del sistema</string>

    <!-- Modelo Envios -->
    <string name="model_shipment_title">Gestionar Envios</string>
    <string name="model_shipment_detail">Administra los envios del sistema</string>

    <!-- Modelo Tiendas -->
    <string name="model_shop_title">Gestionar Tiendas</string>
    <string name="model_shop_detail">Administra las tiendas del sistema</string>

    <!-- Modelo Especificaciones -->
    <string name="model_specify_title">Gestionar Especificaciones</string>
    <string name="model_specify_detail">Administra las especificaciones del sistema</string>

    <!-- Modelo Ubicaciones -->
    <string name="model_ubication_title">Gestionar Ubicaciones</string>
    <string name="model_ubication_detail">Administra las ubicaciones del sistema</string>

    <!-- Modelo Usuarios -->
    <string name="model_user_title">Gestionar Usuarios</string>
    <string name="model_user_detail">Administra los usuarios del sistema</string>

    <!-- Modulos Acciones -->
    <string name="action_save">Guardar</string>
    <string name="action_create">Nuevo</string>
    <string name="action_update">Editar</string>
    <string name="action_delete">Quitar</string>

    <string name="epayco_result">Resultado de Pago</string>
    <string name="epayco_service">Servicio ePayco</string>
    <string name="payment_state">Estado del Pago</string>
</resources>
