<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background_layout"
    tools:context=".admin.ui.AddUserAdmin">

    <include layout="@layout/toolbar_back" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="20dp"
                app:cardElevation="0dp"
                app:cardBackgroundColor="@color/white">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="20dp"
                    android:gravity="center_vertical">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/ic_nuevo" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginStart="16dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/dash_admin_new_user"
                            android:textSize="22sp"
                            android:textStyle="bold"
                            android:textColor="@color/black"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/dash_admin_create_new_user"
                            android:textSize="14sp"
                            android:textColor="@color/subtitle"
                            android:layout_marginTop="6dp"/>

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="0dp"
                app:cardBackgroundColor="@color/white">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="20dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rol"
                        android:textStyle="bold"
                        android:textColor="@color/black"/>

                    <EditText
                        android:id="@+id/etRol"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/bg_edittext"
                        android:paddingHorizontal="16dp"
                        android:hint="@string/enter_rol"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:layout_marginTop="16dp"/>

                    <EditText
                        android:id="@+id/etName"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/bg_edittext"
                        android:paddingHorizontal="16dp"
                        android:hint="@string/enter_name"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/surname"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:layout_marginTop="16dp"/>

                    <EditText
                        android:id="@+id/etSurnames"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/bg_edittext"
                        android:paddingHorizontal="16dp"
                        android:hint="@string/enter_surname"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/email"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:layout_marginTop="16dp"/>

                    <EditText
                        android:id="@+id/etEmail"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/bg_edittext"
                        android:paddingHorizontal="16dp"
                        android:hint="@string/enter_email"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/password"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:layout_marginTop="16dp"/>

                    <EditText
                        android:id="@+id/etPassword"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/bg_edittext"
                        android:paddingHorizontal="16dp"
                        android:hint="@string/enter_password"
                        android:inputType="textPassword"/>

                    <LinearLayout
                        android:id="@+id/btnCreateUser"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:layout_marginTop="24dp"
                        android:gravity="center"
                        android:background="@drawable/bg_button">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/dash_admin_create_user"
                            android:textColor="@color/black"
                            android:textStyle="bold"
                            android:textSize="16sp"/>

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </ScrollView>

    <include layout="@layout/bottom_navigation_admin" />

</LinearLayout>