<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.setting.SettingSellerActivity">

    <!-- Navbar superior -->
    <include
        android:id="@+id/includeSuperior"
        layout="@layout/navbar_seller_return"
        android:layout_width="0dp"
        android:layout_height="64dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Contenido principal -->
    <ScrollView
        android:id="@+id/scrollShopUpdate"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:background="@color/background_layout"
        app:layout_constraintTop_toBottomOf="@id/includeSuperior"
        app:layout_constraintBottom_toTopOf="@id/includeInferior"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="24dp"
            android:paddingTop="28dp"
            android:paddingEnd="24dp"
            android:paddingBottom="36dp"
            android:gravity="center_horizontal">

            <ImageView
                android:id="@+id/imgProfile"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/bg_circle"
                android:padding="12dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_profile" />

            <TextView
                android:id="@+id/btnChangePhoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/change_photo"
                android:textColor="@color/blue"
                android:textSize="14sp"
                android:textStyle="bold" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="20dp"
                app:cardElevation="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="20dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/nit"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/etNit"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/bg_edittext"
                        android:hint="@string/enter_nit"
                        android:paddingHorizontal="16dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/company"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/etCompany"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/bg_edittext"
                        android:hint="@string/enter_company"
                        android:paddingHorizontal="16dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/address"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/etAddress"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/bg_edittext"
                        android:hint="@string/enter_address"
                        android:paddingHorizontal="16dp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="28dp"
                        android:layout_marginBottom="20dp"
                        android:background="@color/line" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/name"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/etName"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/bg_edittext"
                        android:hint="@string/enter_name"
                        android:paddingHorizontal="16dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/surname"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/etSurnames"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/bg_edittext"
                        android:hint="@string/enter_surname"
                        android:paddingHorizontal="16dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/email"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/etEmail"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/bg_edittext"
                        android:hint="@string/enter_email"
                        android:paddingHorizontal="16dp" />

                    <LinearLayout
                        android:id="@+id/btnSaveProfile"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:layout_marginTop="30dp"
                        android:background="@drawable/bg_button_dark"
                        android:gravity="center">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/save_changes"
                            android:textColor="@color/white"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </ScrollView>

    <!-- Menú inferior -->
    <include
        android:id="@+id/includeInferior"
        layout="@layout/navbar_seller_inferior"
        android:layout_width="0dp"
        android:layout_height="76dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
