<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background_layout"
    tools:context=".admin.ui.EditProfileAdmin">

    <include layout="@layout/toolbar_back"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp"
            android:gravity="center_horizontal">

            <ImageView
                android:id="@+id/imgProfile"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/ic_profile"
                android:background="@drawable/bg_circle"
                android:scaleType="centerCrop"/>

            <TextView
                android:id="@+id/btnChangePhoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change_photo"
                android:textStyle="bold"
                android:textColor="@color/blue"
                android:textSize="14sp"
                android:layout_marginTop="10dp"/>


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="0dp"
                app:cardBackgroundColor="@color/white">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="20dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/personal_info"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="@color/black"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/full_name"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:layout_marginTop="20dp"/>

                    <EditText
                        android:id="@+id/etName"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/bg_edittext"
                        android:paddingHorizontal="16dp"
                        android:hint="@string/enter_name"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/email"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:layout_marginTop="16dp"/>

                    <EditText
                        android:id="@+id/etEmail"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/bg_edittext"
                        android:paddingHorizontal="16dp"
                        android:hint="@string/enter_email"/>


                    <LinearLayout
                        android:id="@+id/btnSaveProfile"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:layout_marginTop="28dp"
                        android:gravity="center"
                        android:background="@drawable/bg_button">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/save_changes"
                            android:textStyle="bold"
                            android:textColor="@color/black"
                            android:textSize="16sp"/>

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </ScrollView>

    <include layout="@layout/bottom_navigation_admin"/>

</LinearLayout>